# pycharming

./: MANIFEST.in  README.md  package-lock.json  setup.cfg
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/components/: ExamplePreview.vue
docs/.vitepress/theme/: index.ts
docs/docs/: get-started.md  migration.md  what-is-pycharming.md  why-pycharming.md
docs/docs/api/: color.md  constants.md  environment.md  events-cursor.md  events-keyboard.md  events-mouse.md  events.md  helpers.md  image-cimage.md  image-display.md  image.md  io.md  math-calculation.md  math-cvector.md  math-random.md  math-trigonometry.md  math.md  readme.md  shape-attributes.md  shape-curves.md  shape-primitives.md  shape-vertex.md  shape.md  structure.md  time.md  transform.md  typography.md
docs/docs/features/: shape.md  structure.md
docs/docs/tutorials/: color.md  event.md  image.md  typography.md
docs/examples/: bar.md  bfs.md  bubble.md  dfs.md  globe.md  heart.md  information.md  insertion.md  mandelbrot-set.md  merge.md  overview.md  pie.md  prim.md  snake.md  zeros.md
examples/: information.py  mandelbrot-set.py  zeros.py
src/charming/: __init__.py
