[metadata]
name = charming
url = https://github.com/charming-art/pycharming
projects_url = 
    Documentation = https://github.com/charming-art/pycharming
    Code = https://github.com/charming-art/pycharming
    Issue tracker = https://github.com/charming-art/pycharming/issues
license = MIT
author = Pearmini
author_email = subairui@icloud.com
maintainer = Pearmini
maintainer_email = subairui@icloud.com
description = A creative coding language based on Processing and Python for creating interactive character terminal art.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Console :: Curses
    Environment :: MacOS X
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.6
    Topic :: Artistic Software
    Topic :: Education
    Topic :: Multimedia :: Graphics
    Topic :: Terminals

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src